# ssaw

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_schema.bat  update_schema.sh
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  index.rst  introduction.rst  ssaw.assignments.rst  ssaw.export.rst  ssaw.interviews.rst  ssaw.maps.rst  ssaw.models.rst  ssaw.questionnaires.rst  ssaw.rst  ssaw.settings.rst  ssaw.users.rst  ssaw.workspaces.rst
examples/: offline_design.py
headquarters/: __init__.py  interviews.py  questionnaires.py  utils.py
ssaw/: __about__.py  __init__.py  assignments.py  base.py  exceptions.py  export.py  headquarters.py  headquarters_schema.py  interviews.py  maps.py  models.py  questionnaires.py  settings.py  users.py  utils.py  workspaces.py
ssaw/designer/: __init__.py  constants.py  designer.py
ssaw/headquarters/: __init__.py  assignments.py  base.py  export.py  interviews.py  models.py  questionnaires.py  settings.py  statistics.py  users.py  utils.py
ssaw/models/: __init__.py  assignment.py
tests/: cleanup.sh  conftest.py  create_instance.sh  env_vars.sh  params.json  populate_data.py  prepare_data.sh  start_instance.sh  test_assignments.py  test_export.py  test_interviews.py  test_questionnaires.py  test_users.py  utils.py
tests/headquarters/: __init__.py  conftest.py  test_assignments.py  test_export.py  test_headquarters.py  test_interviews.py  test_maps.py  test_questionnaires.py  test_settings.py  test_users.py  test_workspaces.py
tests/headquarters/mock_fixtures/: assignment_change_target_area.json  criticality_level.json  export_job_running.json  interview_stats.json
tests/headquarters/vcr_cassettes/: test_assignment_archive_unarchive.yaml  test_assignment_assign.yaml  test_assignment_close.yaml  test_assignment_create.yaml  test_assignment_details.yaml  test_assignment_details_notfound.yaml  test_assignment_get_history.yaml  test_assignment_get_quantity_settings.yaml  test_assignment_list.yaml  test_assignment_set_get_delete_calendar_event.yaml  test_assignment_update_quantity.yaml  test_assignment_update_recordaudio.yaml  test_export_cancel.yaml  test_export_get.yaml  test_export_info.yaml  test_export_notfound.yaml  test_export_start.yaml  test_export_start_cancel.yaml  test_headquarters_graphql_error.yaml  test_headquarters_unathorized.yaml  test_headquarters_user_session_login.yaml  test_interview_approve_errors.yaml  test_interview_assign.yaml  test_interview_assign_supervisor.yaml  (+45 more)
